--- a/Memory Game/Memory Game/Memory Game.csproj
+++ b/Memory Game/Memory Game/Memory Game.csproj
@@ -58,6 +58,7 @@
     <Compile Include="DifficultyWindow.xaml.cs">
       <DependentUpon>DifficultyWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="GetScore.cs" />
     <Compile Include="NewGame.xaml.cs">
       <DependentUpon>NewGame.xaml</DependentUpon>
     </Compile>
