Tried to fix Hard Difficulty Cards

--- a/Memory Game/Memory Game/Memory Game.csproj
+++ b/Memory Game/Memory Game/Memory Game.csproj
@@ -158,20 +158,20 @@
     <Resource Include="img\Easy\7.png" />
     <Resource Include="img\Easy\8.png" />
     <Resource Include="img\Easy\9.png" />
-    <Resource Include="img\Harder\1.png" />
-    <Resource Include="img\Harder\10.png" />
-    <Resource Include="img\Harder\11.png" />
-    <Resource Include="img\Harder\12.png" />
-    <Resource Include="img\Harder\13.png" />
-    <Resource Include="img\Harder\14.png" />
-    <Resource Include="img\Harder\2.png" />
-    <Resource Include="img\Harder\3.png" />
-    <Resource Include="img\Harder\4.png" />
-    <Resource Include="img\Harder\5.png" />
-    <Resource Include="img\Harder\6.png" />
-    <Resource Include="img\Harder\7.png" />
-    <Resource Include="img\Harder\8.png" />
-    <Resource Include="img\Harder\9.png" />
+    <Resource Include="img\Hard\1.png" />
+    <Resource Include="img\Hard\10.png" />
+    <Resource Include="img\Hard\11.png" />
+    <Resource Include="img\Hard\12.png" />
+    <Resource Include="img\Hard\13.png" />
+    <Resource Include="img\Hard\14.png" />
+    <Resource Include="img\Hard\2.png" />
+    <Resource Include="img\Hard\3.png" />
+    <Resource Include="img\Hard\4.png" />
+    <Resource Include="img\Hard\5.png" />
+    <Resource Include="img\Hard\6.png" />
+    <Resource Include="img\Hard\7.png" />
+    <Resource Include="img\Hard\8.png" />
+    <Resource Include="img\Hard\9.png" />
     <Resource Include="img\Medium\1.png" />
     <Resource Include="img\Medium\10.png" />
     <Resource Include="img\Medium\11.png" />
