--- a/Memory Game/Memory Game/Memory Game.csproj
+++ b/Memory Game/Memory Game/Memory Game.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Timer.cs" />
     <Compile Include="DifficultyWindow.xaml.cs">
       <DependentUpon>DifficultyWindow.xaml</DependentUpon>
     </Compile>
